# TinyBoothSoundStudio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/tbviz/: Cargo.toml
crates/tbviz/src/: lib.rs
crates/tbviz/src/modules/: chladni.rs  chroma.rs  health.rs  hyperbolic.rs  lissajous.rs  lorenz.rs  mandala.rs  mod.rs  onion.rs  optical_flow.rs  particles.rs  phase_portrait.rs  reassigned.rs  recurrence.rs  saliency.rs  similarity.rs  som.rs  spectrogram.rs  spectrum_bars.rs  tda.rs  vectorscope.rs
docs/: architecture.md  design-vibes.md  rust-survival-guide.md  sound-vision-philosophy.md  suno-cleaning.md
docs/audit/: 2026-04-27-codebase-audit.md
docs/feature-requests/: README.md  TBSS-FR-0001-suno-cleanup.md  TBSS-FR-0002-multitrack-remastering.md  TBSS-FR-0003-import-normalization.md  TBSS-FR-0004-console-mixer-automation.md  TBSS-FR-0005-track-telemetry.md  TBSS-FR-0006-ml-boundary.md  TBSS-FR-0007-tib-container-revisions.md  TBSS-FR-0008-record-tab-recordings-browser.md  TBSS-FR-0009-generator-track.md  TBSS-FR-0010-crossfade-tab.md  TBSS-FR-0011-tib-stem-cache.md  TBSS-FR-0012-tinybooth-album.md  suno-cleanup.md
docs/manual/: 00-index.md  01-getting-started.md  02-recording.md  03-recording-tones.md  04-admin.md  05-projects.md  06-export.md  07-suno-import.md  08-self-update.md  09-using-this-manual.md  10-mix.md  README.md  appendix-a-troubleshooting.md  appendix-b-file-formats.md
docs/research/: sound-visualization-engines.md  sound-visualization-findings.json  sound-visualization-science.md
scripts/: ship.ps1
src/: album.rs  analysis.rs  app.rs  audio.rs  automation.rs  cleanup.rs  coherence.rs  config.rs  crossfade.rs  crossfade_player.rs  dsp.rs  export.rs  generator.rs  git_update.rs  lufs.rs  main.rs  manual.rs  player.rs  project.rs  suno_import.rs  suno_meta.rs  tba.rs  tba_album.rs  telemetry.rs  tib.rs  tib_project.rs  trim.rs  wav_meta.rs
src/ui/: admin.rs  album.rs  audio_devices.rs  correction.rs  crossfade.rs  export.rs  generator_params.rs  health.rs  import_conflict.rs  import_dialog.rs  manual.rs  migrate_to_tib.rs  mix.rs  mod.rs  profile_editor.rs  project.rs  record.rs  spectrum_panel.rs  telemetry_settings.rs  trim.rs  update_dialog.rs  visualizer.rs  viz.rs
src/ui/visualizer/: mod.rs
src/ui/visualizer/modules/: chladni.rs  chroma.rs  health.rs  hyperbolic.rs  lissajous.rs  lorenz.rs  mandala.rs  mod.rs  onion.rs  optical_flow.rs  particles.rs  phase_portrait.rs  reassigned.rs  recurrence.rs  saliency.rs  similarity.rs  som.rs  spectrogram.rs  spectrum_bars.rs  tda.rs  vectorscope.rs
tools/: README.md  compare.py
wix/: main.wxs
