[package]
name = "tinybooth-sound-studio"
version = "0.4.48"
edition = "2021"
authors = ["ophiocus <csantanad@gmail.com>"]
description = "Channel recorder, visualizer, and TinyBooth project exporter"
license = "MIT"

[dependencies]
# GUI
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
egui_commonmark = { version = "0.17", features = ["better_syntax_highlighting"] }

# Config / IO / errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"
anyhow = "1"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Self-update
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Audio
cpal = "0.15"
hound = "3.5"
rustfft = "6.2"
biquad = "0.5"

# Catmull-Rom spline interpolation for replaying recorded fader gestures
# in the console mixer. See TBSS-FR-0004 §4.4 for the survey + rationale.
splines = "5"

# PNG decoding for the egui viewport icon (window top-left corner).
image = { version = "0.25", default-features = false, features = ["png"] }

# Zip archive reading for Suno stem-bundle import ("Download All" zips).
zip = { version = "2", default-features = false, features = ["deflate"] }

# Open files / folders in the OS default handler (used by the import-
# result modal's "Open log folder" button, etc.).
open = "5"

# Project storage — a `.tib` project is a single SQLite database
# (TBSS-FR-0007). `bundled` compiles SQLite from source so there's no
# system-library dependency; `blob` enables incremental BLOB I/O for
# streaming large stem audio in/out without a second full-size buffer.
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

[build-dependencies]
winres = "0.1"

[package.metadata.wix]
upgrade-guid = "48D329DD-B504-46C4-B23E-D3FDD71F4ABE"
path-guid    = "E5C50DF6-615E-4200-85BF-46AA131EF965"
license      = false
eula         = false

[profile.release]
opt-level = 3
# Thin LTO: most of the cross-crate inlining win of fat LTO at a
# fraction of the link time. Runtime perf is within noise for this
# workload (UI + block-based DSP), and CI link time drops noticeably.
lto = "thin"
codegen-units = 1
strip = true
