[package]
name = "tbviz"
version = "0.1.0"
edition = "2021"
authors = ["ophiocus <csantanad@gmail.com>"]
description = "TinyBooth visualizer engine — pluggable audio-reactive VizModules over a shared FrameCtx. Shared by TinyBooth Sound Studio and TinyAmp."
license = "MIT"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
rustfft = "6.2"
